--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -232,8 +232,13 @@
          flex-direction: column;
          align-items: flex-start;
          gap: 20px;
+         paddinggit -left: 0;
      }
 
+     nav li {
+         list-style: none;
+         margin-left: 0;
+     }
 
      nav,
      .contact,
