--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -232,7 +232,7 @@
          flex-direction: column;
          align-items: flex-start;
          gap: 20px;
-         padding-left: 0;
+         padding-left: 0px;
      }
 
      nav li {
